@@ -16,12 +16,15 @@ THINK: struct passwd *userinfo; /* defined in pwd.h + if ((userinfo = getpwuid(g
 
 TODO: xim "how to" faq entry
 TODO: reorganize faq
-TODO: support +xxx option syntax (e.g. -tint red +tint)
 TODO: scrollstyle -next, raised/sunken, maybe extra pixels(?) w. halfshadow
 
 	- changed interpretation of [alpha] colour prefix.
+        - +option now really sets the option to default, instead of using the
+          resource value.
         - further round trip eliminations in the !XFT case by remembering
           the colour components.
+        - plain scrollbar works better with -sr.
+        - fixed half-shadow scrollbar look.
 
 7.5  Tue Jan 31 15:15:43 CET 2006
         - further improvements to the careful mode detection, and font width
